; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_sdiff.c_skip_white.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_sdiff.c_skip_white.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"read failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @skip_white to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_white() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %11, %0
  %3 = call i32 (...) @getchar()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = call i32 @isspace(i32 %4) #3
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* %1, align 4
  %9 = icmp eq i32 %8, 10
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %2
  br label %13

11:                                               ; preds = %7
  %12 = call i32 (...) @checksigs()
  br label %2

13:                                               ; preds = %10
  %14 = load i32, i32* @stdin, align 4
  %15 = call i64 @ferror(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = call i32 @_(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @perror_fatal(i32 %18)
  br label %20

20:                                               ; preds = %17, %13
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @getchar(...) #1

; Function Attrs: nounwind readonly
declare dso_local i32 @isspace(i32) #2

declare dso_local i32 @checksigs(...) #1

declare dso_local i64 @ferror(i32) #1

declare dso_local i32 @perror_fatal(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
